# rusty-neander

./: .gitignore  Cargo.toml  LICENSE  index.js  neander.html  neander.js  package-lock.json  package.json  webpack.config.js
crate-wasm/: Cargo.toml
crate-wasm/src/: lib.rs  neander.rs  neander_bindgen.rs
crate-wasm/src/ahmes/: bindgen.rs  core.rs
crate-wasm/src/cesar/: bindgen.rs  core.rs  decoder.rs  mod.rs  operations.rs
crate-wasm/src/common/: alu_trait.rs  experimental.rs  memory_trait.rs  mod.rs  register_trait.rs  runner_trait.rs
crate-wasm/src/neander/: bindgen.rs  core.rs  mod.rs
crate-wasm/src/ramses/: bindgen.rs  core.rs  mod.rs
crate-wasm/tests/ahmes/: add_test.ahd  add_test.mem  and_test.ahd  and_test.mem  jb_test.ahd  jb_test.mem  jc_test.ahd  jc_test.mem  jmp_test.ahd  jmp_test.mem  jn_test.ahd  jn_test.mem  jv_test.ahd  jv_test.mem  jz_test.ahd  jz_test.mem  lda_test.ahd  lda_test.mem  not_test.ahd  not_test.mem  or_test.ahd  or_test.mem  ressult.shl_test.mem  result.add_test.mem  result.and_test.mem  result.jb_test.mem  result.jc_test.mem  result.jmp_test.mem  result.jn_test.mem  result.jv_test.mem  result.jz_test.mem  result.lda_test.mem  result.not_test.mem  result.or_test.mem  result.rol_test.mem  result.ror_test.mem  result.shr_test.mem  result.sta_test.mem  result.sub_test.mem  rol_test.ahd  (+11 more)
crate-wasm/tests/cesar/: adc_test.ced  adc_test.mem  add_test.ced  add_test.mem  add_test.result.mem  and_test.ced  and_test.mem  and_test.result.mem  asl_test.ced  asl_test.mem  asl_test.result.mem  asr_test.ced  asr_test.mem  bcc_test.ced  (+133 more)
(+95 files in other folders)
