[package]
name = "wasm_emulators"
description = "Implementação em rust dos maquinas hipoteticas usadas para ensino"
version = "0.2.0"
authors = ["Affonso Neto"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"]}
wasm-bindgen = { version = "0.2.69", features = ["serde-serialize"]}
rstest = "0.6.4"