[package]
name = "wasm_emulators"
description = "Implementação em rust dos maquinas hipoteticas usadas para ensino"
version = "0.2.0"
authors = ["Affonso Neto"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"]}
wasm-bindgen = { version = "0.2.69", features = ["serde-serialize"]}
console_error_panic_hook = "0.1.6"
rstest = "0.6.4"
differ = "1"
cfg-if = "0.1"
log = "0.4"
env_logger = "0.8.3"
console_log = { version = "0.2", optional = true }

[features]
default = ["console_log"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O", "--enable-mutable-globals"]